...

const Tab = createBottomTabNavigator();
const Stack = createStackNavigator();

const hideHeader = { headerShown: false };

const moreLabel = "More";

const individualTabs = [
  {
    id: 1,
    name: screenName.home,
    label: "Overview",
    component: IndividualHomeStack,
    activeIcon: homeIcon,
    inActiveIcon: homeIconFocused,
  },
  {
    id: 2,
...
    label: "Profile",
    component: Profile,
  },
  {
    id: 10,
    name: screenName.supportTickets,
    label: "Support Tickets",
    component: SupportTicketsScreen,
  },
];

const renderIndividualTabBar = (
  props: any,
...
