export const screenName = {
    welcome: 'Welcome',
    login: 'Login',
    register: 'Register',
    forgotPassword: 'Forgot-password',
    searchResults: 'Search',
    verifyEmail: 'verify-email',
    home: 'Home',
    artwork: 'Artwork',
    catalogListing: 'Catalog-listing',
    catalog: 'Catalog',
    orders: 'Orders',
    ordersListing: 'orders-listing',
    purchaseArtwork: 'purchase-artwork',
    payment: 'payment',
    profileScreen: 'profile-screen',
    profile: 'Profile',
    editProfile: 'edit-profile',
    savedArtworks: 'saved-artworks',
    filter: 'filter',
    artworkMediumFilterModal: 'artwork-medium-filter-modal',
    artworkCategoriesFilterModal: 'artwork-categories-filter-modal',
    notifications: 'notifications',
    editorialsListing: 'editorials',
    editorial: 'editorial',
    cancleOrderPayment: 'CancleOrderPayment',
    successOrderPayment: 'SuccessOrderPayment',
    checkout: 'checkout',
    connectStripe: 'connect-stripe',
    artworksMedium: 'artworks-medium',
    artworkCategories: 'artwork-categories',
    verifyTransaction: 'verify-transaction',
    gallery: {
        overview: 'Overview',
        artworks: 'Artworks',
        uploadArtwork: 'upload-artwork',
        uploadNewLogo: 'upload-new-gallery-logo',
        orders: 'Orders',
        profile: 'Profile',
        editProfile: 'edit-profile',
        billing: 'billing-plans',
        changePassword: 'change-gallery-password',
        subscriptions: 'Billing',
        order: 'gallery-order',
        stripePayouts: 'Payouts',
        editArtwork: 'edit-artwork',
        changeBillingCard: 'change-billing-card',
    }
}