...
        placeholder="Ask Omenai"
        placeholderTextColor={colors.grey}
        value={searchQuery}
        onChangeText={setSearchQuery}
        onSubmitEditing={handleSearch}
        returnKeyType="search"
        testID="search-input"
      />
      <TouchableOpacity
        style={[
          tw`h-full rounded-sm items-center justify-center px-5`,
          { backgroundColor: colors.primary_black },
        ]}
...
