...
import { Ionicons } from "@expo/vector-icons";
import { formatEventDate } from "#utils/date/utils_formatEventDate";

type NotificationDetailsModalProps = {
  visible: boolean;
  onClose: () => void;
  notification: {
    title: string;
    body: string;
    sentAt: string;
  } | null;
};

...
