...
import Home from 'screens/home/Home';
import Artwork from 'screens/artwork/Artwork';
import SearchResults from 'screens/searchResults/SearchResults';
import Orders from 'screens/orders/Orders';
import Payment from 'screens/payment/Payment';
import Filter from 'components/filter/Filter';
import Notifications from 'screens/notifications/Notifications';
import EditorialsListing from 'screens/editorialsListing/EditorialsListing';
import CancleOrderPayment from 'screens/payment/components/cancel/CancleOrderPayment';
import SuccessOrderPayment from 'screens/payment/components/success/SuccessOrderPayment';
import EditProfile from 'screens/editProfile/EditProfile';
import ArtworksMedium from 'screens/artworksMedium/ArtworksMedium';
import ArtworkMediumFilterModal from 'screens/artworksMedium/components/filter/ArtworkMediumFilterModal';
...
