...
                    placeHolder='Enter password'
                    value={individualLoginData.password}
                />
            </View>
            <View style={{gap: 40}}>
                <LongBlackButton
                    value={isLoading ? 'Loading...' : 'Log In'}
                    isDisabled={!(individualLoginData.email && individualLoginData.password)}
                    onClick={handleSubmit}
                    isLoading={isLoading}
                />
                <TouchableOpacity onPress={() => navigation.navigate(screenName.forgotPassword, {type: 'individual'})}>
                    <Text style={styles.resetText}>Forgot password? Click here</Text>
                </TouchableOpacity>
            </View>
        </View>
    )
}

...
